--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,7 @@ body {
   animation: slide-opacity 2s ease-in-out 3s forwards;
   overflow: hidden;
   line-height: 1.8;
+  height: 200px;
 }
 .read_more {
   color: grey;
@@ -99,8 +100,9 @@ img {
 .logo {
   display: flex;
   justify-content: space-between;
-
-  position: relative;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .samsung_logo {
@@ -147,7 +149,17 @@ img {
   z-index: 2;
 }
 .gallery {
-  width: 50%;
+  /* width: 50%; */
+}
+
+@keyframes slideIn-gallery {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .paddings {
@@ -157,8 +169,17 @@ img {
   width: 100%;
   height: 1000px;
   object-fit: cover;
+  opacity: 0;
   display: none;
+  transition: opacity 1s ease;
+  transform: translate(5px, -82px);
 }
+
+.frame_collection.active {
+  display: block;
+  opacity: 1;
+}
+
 @keyframes frame-in-overlay {
   0% {
     right: -100%; /* Начинает за пределами экрана */
@@ -192,6 +213,7 @@ button {
   width: 50%;
   display: flex;
   flex-direction: column;
+  padding-left: 20px;
 }
 .frame {
   position: absolute; /* Изображение должно быть внутри контейнера */
