--- a/src/style.css
+++ b/src/style.css
@@ -171,13 +171,17 @@ img {
   object-fit: cover;
   opacity: 0;
   display: none;
-  transition: opacity 1s ease;
+  transition: opacity 1s ease, transform 1s ease;
   transform: translate(5px, -82px);
 }
 
 .frame_collection.active {
-  display: block;
+  display: block ;
   opacity: 1;
+}
+
+.some {
+  opacity: 0.5;
 }
 
 @keyframes frame-in-overlay {
