--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -21,51 +21,52 @@ body {
   background-size: cover;
 }
 .active {
-  display: block !important; 
-  opacity: 1 !important; 
+  display: block !important;
+  opacity: 1 !important;
 }
 .stop-animation {
-  animation: none !important; 
+  animation: none !important;
 }
 
 .frame_text {
   font-family: "SamsungSharpSans", sans-serif;
 
-  font-size: 16px;
-  display: none; 
-  opacity: 0; 
-  transition: opacity 0.5s ease-in-out; 
+  font-size: 20px;
+  display: none;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
 }
 
 @keyframes enlarge-shrink {
   0%,
   100% {
-    transform: scale(1); 
+    transform: scale(1);
   }
   50% {
-    transform: scale(1.1); 
+    transform: scale(1.1);
   }
 }
 
 .navigation .left button img,
 .navigation .right button img {
   width: 16px;
-  animation: enlarge-shrink 2s infinite ease-in-out; 
+  animation: enlarge-shrink 2s infinite ease-in-out;
 }
 
 .frame_text_container {
-  margin-top: 200px;
+  margin-top: 50px;
   opacity: 0;
   animation: slide-opacity 2s ease-in-out 3s forwards;
   overflow: hidden;
   line-height: 1.8;
-  height: 200px;
+  height: 227px;
+  width: 640px;
 }
 .read_more {
   color: grey;
   font-family: "SamsungSharpSans", sans-serif;
 
-  font-size: 16px;
+  font-size: 20px;
 }
 
 @keyframes slide-opacity {
@@ -128,7 +129,6 @@ img {
 .overlay {
   background: white;
 
-  
   width: 50%;
   height: 100%;
   z-index: 2;
@@ -142,18 +142,16 @@ img {
   content: "";
   position: absolute;
   top: 0;
-  left: -100%; 
-  width: 50%; 
-  height: 100%; 
+  left: -100%;
+  width: 50%;
+  height: 100%;
   background-color: white;
-  z-index: 0; 
-  transition: left 0.5s ease; 
+  z-index: 0;
+  transition: left 0.5s ease;
   transition: none;
   animation: frame-in-overlay 2s ease-in-out 2.6s forwards;
   z-index: 2;
 }
-
-
 
 @keyframes slideIn-gallery {
   from {
@@ -170,12 +168,15 @@ img {
 }
 .frame_collection {
   width: 100%;
-  height: 1100px;
+  height: 100%;
   object-fit: cover;
   opacity: 0;
   display: none;
   transition: opacity 1s ease, transform 1s ease;
-  transform: translate(5px, -82px);
+  /* transform: translate(5px, -82px); */
+}
+.gallery {
+  /* width: 50%; */
 }
 
 .frame_collection.active {
@@ -189,11 +190,11 @@ img {
 
 @keyframes frame-in-overlay {
   0% {
-    right: -100%; 
+    right: -100%;
   }
 
   100% {
-    left: 0; 
+    left: 0;
   }
 }
 
@@ -205,6 +206,7 @@ img {
 
   display: none;
   opacity: 0;
+  padding-left: 20px;
 }
 .counter {
   font-family: "SamsungSharpSansBold", sans-serif;
@@ -233,6 +235,9 @@ button {
   animation: pulse-like-heart 2s infinite ease-in-out;
   display: none;
   margin-top: 15px;
+  margin-bottom: 33px;
+
+  margin-left: 40px;
 }
 
 @keyframes pulse-like-heart {
@@ -240,10 +245,10 @@ button {
     transform: scale(1);
   }
   10% {
-    transform: scale(1.1); 
+    transform: scale(1.1);
   }
   100% {
-    transform: scale(1); 
+    transform: scale(1);
   }
 }
 
@@ -252,56 +257,57 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-left: 20px;
+  /* padding-left: 40px; */
+  padding-bottom: 20px;
 }
 .frame {
-  position: absolute; 
-  top: 0; 
-  left: 0; 
-  width: 100%; 
-  height: 100%; 
-  object-fit: cover; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   display: none;
 }
 
 @keyframes frame-in {
   0% {
-    right: -100%; 
+    right: -100%;
   }
 
   100% {
-    left: 0; 
+    left: 0;
   }
 }
 @keyframes frame-in-parg-right {
   0% {
-    transform: translate(0); 
-    opacity: 1; 
+    transform: translate(0);
+    opacity: 1;
   }
 
   100% {
-    transform: translate(250px); 
-    opacity: 0; 
+    transform: translate(250px);
+    opacity: 0;
   }
 }
 
 @keyframes frame-in {
   0% {
-    right: -100%; 
+    right: -100%;
   }
 
   100% {
-    left: 0; 
+    left: 0;
   }
 }
 @keyframes frame-in-parg-left {
   0% {
-    transform: translate(0); 
-    opacity: 1; 
+    transform: translate(0);
+    opacity: 1;
   }
 
   100% {
-    transform: translate(-250px); 
+    transform: translate(-250px);
     opacity: 0;
   }
 }
@@ -309,11 +315,12 @@ button {
 .all1 {
   width: 100%;
   display: flex;
-  height: 1000px;
+  height: 900px;
+  margin-top: -54px;
 }
 .container {
   /* padding: 35px; */
-  width: 1600px;
+  width: 1400px;
   overflow: hidden;
   position: relative;
   display: flex;
@@ -321,17 +328,17 @@ button {
 
   border: 4px solid #000;
 
-  
+  /* max-height: 1000px; */
   background-position: center;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
   background-size: cover;
 }
 .description {
-  margin-top: 120px;
+  margin-top: 230px;
   max-width: 475px;
   font-family: "SamsungSharpSansBold", sans-serif;
   font-size: 36px;
-
+  padding-left: 20px;
   position: relative;
   z-index: 5;
 }
@@ -379,7 +386,7 @@ button {
 }
 
 .description_text_third {
-  animation: slide-in-descr-3 2s ease-in-out 1.7s forwards; 
+  animation: slide-in-descr-3 2s ease-in-out 1.7s forwards;
   transform: translate(-120%, 100px);
 }
 
@@ -400,7 +407,7 @@ button {
 
 .bottom_title {
   z-index: 1;
-
+  margin-left: 20px;
   margin-top: 35px;
 }
 
@@ -427,6 +434,7 @@ button {
   position: relative;
   z-index: 55;
   padding-bottom: 20px;
+  margin-left: 20px;
 }
 
 @keyframes slide-in {
@@ -457,12 +465,12 @@ button {
 
 @keyframes slide-in-btm {
   0% {
-    transform: translate(-100%); 
-    opacity: 0; 
+    transform: translate(-100%);
+    opacity: 0;
   }
 
   100% {
-    opacity: 1; 
+    opacity: 1;
     transform: translate(0);
   }
 }
@@ -470,35 +478,35 @@ button {
 @keyframes slide-in-2 {
   0% {
     left: -220px;
-    opacity: 0; 
-    top: 150px; 
+    opacity: 0;
+    top: 150px;
   }
   50% {
-    opacity: 1; 
-    left: 0; 
-    top: 150px; 
+    opacity: 1;
+    left: 0;
+    top: 150px;
   }
   100% {
-    opacity: 1; 
-    left: 0; 
-    top: 40px; 
+    opacity: 1;
+    left: 0;
+    top: 40px;
   }
 }
 
 @keyframes slide-in-3 {
   0% {
-    left: -220px; 
-    opacity: 0; 
-    top: 200px; 
+    left: -220px;
+    opacity: 0;
+    top: 200px;
   }
   50% {
-    opacity: 1; 
-    left: 0; 
-    top: 200px; 
+    opacity: 1;
+    left: 0;
+    top: 200px;
   }
   100% {
-    opacity: 1; 
-    left: 0; 
-    top: 80px; 
+    opacity: 1;
+    left: 0;
+    top: 80px;
   }
 }
